<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layoutDescription="@xml/fragment_detail_motion_scene"
        app:layout_anchorGravity="center">

        <FrameLayout
            android:id="@+id/white_backdrop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="@dimen/backdrop_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/file_name"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_large"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_title"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@{downloadedFile.title}"
            app:layout_constraintBottom_toTopOf="@+id/tv_file_path"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_file_path_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/file_path"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="@+id/tv_file_path"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_file_path" />

        <TextView
            android:id="@+id/tv_file_path"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_large"
            app:layout_constraintBottom_toTopOf="@+id/tv_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:textOrHyphen="@{downloadedFile.filePath}" />

        <TextView
            android:id="@+id/tv_status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/status"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_large"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_status"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_large"
            app:layout_constraintBottom_toTopOf="@+id/tv_reason"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_file_path"
            app:textOrHyphen="@{downloadedFile.status}" />

        <TextView
            android:id="@+id/tv_reason_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/reason"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_large"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_reason"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_reason"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_large"
            app:layout_constraintBottom_toTopOf="@+id/tv_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            app:textOrHyphen="@{downloadedFile.reason}" />

        <TextView
            android:id="@+id/tv_size_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/size"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_large"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_size"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_size"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_extra_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_title_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_reason"
            app:textOrHyphen="@{downloadedFile.size}" />

        <androidx.cardview.widget.CardView
            android:id="@+id/status_indicator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@{downloadedFile.statusColor}"
            app:cardCornerRadius="@dimen/status_indicator_corner_radius"
            app:layout_constraintBottom_toBottomOf="@+id/tv_status_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_43"
            app:layout_constraintTop_toTopOf="@+id/tv_status_label">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/detail_content_description"
                app:srcCompat="@drawable/ic_baseline_chevron_left_24" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".43" />

        <include
            android:id="@+id/fake_download_layout"
            layout="@layout/fragment_download"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationX="@dimen/x_offscreen_right"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.motion.widget.MotionLayout>

    <data>

        <variable
            name="downloadedFile"
            type="com.example.filedownloader.model.DownloadedFile" />
    </data>
</layout>
